--- a/user/templates/fillForm.html
+++ b/user/templates/fillForm.html
@@ -35,30 +35,30 @@
 
                 <div class="form-control">
                     <label for="first_name">First Name</label>
-                    <input type="text" name="first_name">
+                    <input type="text" name="first_name" {% if request.user.first_name != None %}value="{{ request.user.first_name }}" {% else %} value="" {% endif %}>
                 </div>
 
                 <br>
                 <div class="form-control">
                     <label for="last_name">Last Name</label>
-                    <input type="text" name="last_name">
+                    <input type="text" name="last_name" {% if request.user.last_name != None %}value="{{ request.user.last_name }}" {% else %} value="" {% endif %}>
                 </div>
                 <br>
                 <div class="form-control">
                     <label for="address">Address</label>
-                    <input type="text" name="address">
+                    <input type="text" name="address" {% if request.user.address != None %}value="{{request.user.address}}" {% else %} value="" {% endif%}>
                 </div>
                 <br>
                 <div class="form-control">
                     <label for="phone_number">Phone Number</label>
-                    <input type="number" name="phone_number">
+                    <input type="number" name="phone_number" {% if request.user.phone_number != None %}value="{{request.user.phone_number}}" {% else %} value="" {% endif%}>
                 </div>
                 <br>
                 <div class="form-control">
                     <label for="gender">Gender</label>
-                    <input type="radio" name="gender" value="Male">Male
-                    <input type="radio" name="gender" value="Female">Female
-                    <input type="radio" name="gender" value="Others">Others
+                    <input type="radio" name="gender" value="Male" {% if request.user.gender == "Male" %} checked {% endif %}>Male
+                    <input type="radio" name="gender" value="Female" {% if request.user.gender == "Female" %} checked {% endif %}>Female
+                    <input type="radio" name="gender" value="Others" {% if request.user.gender == "Others" %} checked {% endif %}>Others
                 </div>
                 <br>
                 <div class="form-control">
@@ -71,7 +71,10 @@
             </select>
                 </div>
                 <br>
+
                 <div class="form-control">
+                    <p>Current image</p>
+                    <img src="{{request.user.get_photo_url}}" alt="" srcset="">
                     <label for="profile_image">Profile Image</label>
                     <input type="file" name="profile_image">
                 </div>
