--- a/user/templates/fillForm.html
+++ b/user/templates/fillForm.html
@@ -51,7 +51,7 @@
                 <br>
                 <div class="form-control">
                     <label for="phone_number">Phone Number</label>
-                    <input type="number" name="phone_number" {% if request.user.phone_number != None %}value="{{request.user.phone_number}}" {% else %} value="" {% endif%}>
+                    <input type="text" name="phone_number" {% if request.user.phone_number != None %}value="{{request.user.phone_number}}" {% else %} value="" {% endif%}>
                 </div>
                 <br>
                 <div class="form-control">
@@ -79,6 +79,11 @@
                     <input type="file" name="profile_image">
                 </div>
                 <br>
+                {% if errors %}
+                <div class="form-control">
+                    {{errors}}
+                </div>
+                {% endif %}
                 <input type="submit" value="Submit">
             </form>
         </div>
